--- a/src/pages/liked.html
+++ b/src/pages/liked.html
@@ -23,7 +23,7 @@
 
 <script src="https://cdn.tailwindcss.com"></script>
 
-<script type="module" src="/src/js/liked.js "></script>
+<script type="module" src="./src/js/liked.js "></script>
 
 
 </body>
