--- a/src/pages/cart.html
+++ b/src/pages/cart.html
@@ -39,7 +39,7 @@
 
 <script src="https://cdn.tailwindcss.com"></script>
 
-<script type="module" src="/src/js/cart.js"></script>
+<script type="module" src="./src/js/cart.js"></script>
 
 </body>
 </html>
