--- a/public/auth/signin.html
+++ b/public/auth/signin.html
@@ -81,14 +81,14 @@
 
     <div class="flex justify-center items-center p-[50px] border-r border-[#f1f1f2] max-[1000px]:hidden">
       <div class="w-full h-[80%]">
-        <img src="/src/images/auth/svg-login.svg" alt="Login illustration" class="w-full h-full" />
+        <img src="./src/images/auth/svg-login.svg" alt="Login illustration" class="w-full h-full" />
       </div>
     </div>
     
   </div>
 </div>
 
-<script type="module" src="/src/js/signin.js"></script>
+<script type="module" src="./src/js/signin.js"></script>
 
     
 </body>
