--- a/public/auth/login.html
+++ b/public/auth/login.html
@@ -12,7 +12,7 @@
 
     <div class="flex justify-center items-center p-[50px] border-r border-[#f1f1f2] max-[1000px]:hidden">
       <div class="w-full h-[70%]">
-        <img src="/src/images/auth/svg-login.svg" alt="Login illustration" class="w-full h-full" />
+        <img src="./src/images/auth/svg-login.svg" alt="Login illustration" class="w-full h-full" />
       </div>
     </div>
 
@@ -55,7 +55,7 @@
   </div>
 </div>
 
-<script type="module" src="/src/js/login.js"></script>
+<script type="module" src="./src/js/login.js"></script>
 
 </body>
 </html>
